Fix for mozilla not showing logo in header

--- a/_assets/stylesheets/styles.css
+++ b/_assets/stylesheets/styles.css
@@ -122,8 +122,8 @@ a img {
 #logo-bar a img,
 #logo-bar-sl a img {
 	display: inline-block;
-	height: auto;
-	width: 100%;
+	height: 40px;
+	width: 323px;
  }
 
 .nav-buttons {
